add_executable(rectest ./receivingtests.c)
add_executable(movsec ./movesection.c)
add_executable(map ./map.c)
add_executable(splitsection ./splitsection.c)
add_executable(trimslice ./trimslice.c)

target_link_libraries(http PRIVATE core_logic)
target_link_libraries(rectest PRIVATE core_logic "-Wl,--wrap,read")
target_link_libraries(movsec PRIVATE core_logic)
target_link_libraries(map PRIVATE core_logic m)
target_link_libraries(splitsection PRIVATE core_logic)
target_link_libraries(trimslice PRIVATE core_logic)
